--- a/BLAZAM/Shared/UI/OU/RenameOUModalContent.razor
+++ b/BLAZAM/Shared/UI/OU/RenameOUModalContent.razor
@@ -25,14 +25,22 @@
     {
         await base.OnInitializedAsync();
         await InvokeAsync(StateHasChanged);
+        Modal.OnYes += SaveChanges;
+        Modal.YesText = UserLocalization["Save Changes"];
+        Modal.Title = UserLocalization["Rename OU"];
+        Modal.YesEnabled = ValidateModal;
     }
 
-    
-        async Task SaveChanges()
+
+    async void SaveChanges()
     {
         SnackBarService.Warning("The ou has been renamed but changes must be saved.", "OU renamed");
         Close();
 
+    }
+    protected override bool ValidateModal()
+    {
+        return !OU.CanonicalName.IsNullOrEmpty();
     }
 
 }
