--- a/BLAZAM/Shared/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAM/Shared/UI/Users/ChangeUserPasswordModalContent.razor
@@ -1,29 +1,30 @@
 ﻿@inherits AppModalContent
+
 <div Background="Background.Light" Color="Color.Dark">
     <SettingsField>
-            <MudTextField Label="@UserLocalization["Username"]" @bind-Value="@User.SamAccountName" Disabled=true />
+        <MudTextField Label="@UserLocalization["Username"]" @bind-Value="@User.SamAccountName" Disabled=true />
 
-        
+
     </SettingsField>
 
     <SettingsField>
-        
-            <MudTextField Label="@UserLocalization["Email Address"]" @bind-Value="@User.Email" Disabled=true />
 
-        
+        <MudTextField Label="@UserLocalization["Email Address"]" @bind-Value="@User.Email" Disabled=true />
+
+
     </SettingsField>
 
-        <SettingsField>
-            
-                <MudTextField Label="@UserLocalization["Password"]" InputType="InputType.Password" @bind-Value="@newPassword"/>
-            
-        </SettingsField>
-        <SettingsField>
-            
-                <MudTextField Label="@UserLocalization["Password"]" InputType="InputType.Password" @bind-Value="@newPasswordConfirm"/>
+    <SettingsField>
 
-            
-        </SettingsField>
+        <MudTextField Validation="@(newPassword.IsNullOrEmpty()==false)" Label="@UserLocalization["Password"]" InputType="InputType.Password" @bind-Value="@newPassword" />
+
+    </SettingsField>
+    <SettingsField>
+
+        <MudTextField Validation="@(newPasswordConfirm.Equals(newPassword))" Label="@UserLocalization["Password"]" InputType="InputType.Password" @bind-Value="@newPasswordConfirm" />
+
+
+    </SettingsField>
     <SettingsField>
         <MudText>
             @UserLocalization["Require change"]
@@ -31,43 +32,48 @@
         <MudText>
             Require the user to change their password at next logona
         </MudText>
-        
-            <MudSwitch T="bool" @ref=requireChangeSwitch/>
 
-        
+        <MudSwitch T="bool" @ref=requireChangeSwitch />
+
+
 
     </SettingsField>
-    <MudButton Color=Color.Primary Disabled=!PasswordsValid OnClick="SaveChanges">@UserLocalization["Change Password"]</MudButton>
 </div>
 @code {
-#nullable disable warnings
-    string newPassword;
-    string newPasswordConfirm;
+    #nullable disable warnings
+    string newPassword = "";
+    string newPasswordConfirm = "";
     MudSwitch<bool> requireChangeSwitch;
 
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        await InvokeAsync(StateHasChanged);
+        Modal.OnYes += SaveChanges;
+        Modal.YesText = UserLocalization["Change Password"];
+        Modal.Title = "Change Password";
+
+        Modal.YesEnabled = ValidateModal;
     }
 
 
-    async Task SaveChanges()
+    public async void SaveChanges()
     {
         //User.CommitChanges();
+
         if (User.SetPassword(newPassword.ToSecureString(), requireChangeSwitch.Checked))
         {
-           
-                
-             SnackBarService.Success("Changed password for " + User.DisplayName, "Password Changed");
+
+
+            SnackBarService.Success("Changed password for " + User.DisplayName, "Password Changed");
+            AuditLogger.User.PasswordChanged(User,requireChangeSwitch.Checked);
+            Close();
+
         }
         else
         {
-             SnackBarService.Error("Unable to set password for " + User.DisplayName, "Change Failed");
+            SnackBarService.Error("Unable to set password for " + User.DisplayName, "Change Failed");
 
         }
-        Close();
-
     }
     bool PasswordsValid
     {
@@ -79,13 +85,12 @@
             return false;
         }
     }
-    //void ValidateName(ValidatorEventArgs e)
-    //{
+    protected override bool ValidateModal()
+    {
+        return (!newPassword.IsNullOrEmpty()
+        && !newPasswordConfirm.IsNullOrEmpty()
+        && newPassword.Equals(newPasswordConfirm));
+    }
 
-    //    e.Status = !PasswordsValid
-    //        ? ValidationStatus.Error
-    //    : ValidationStatus.Success;
-
-    //}
 
 }
