--- a/BLAZAM/Pages/Error/Oops.razor
+++ b/BLAZAM/Pages/Error/Oops.razor
@@ -10,9 +10,21 @@
 
 <PageTitle>Oops</PageTitle>
 <h3>@Loc["Oops"]</h3>
-<h6>@ErrorMessage</h6>
-<p>@DetailsMessage</p>
-<p>@HelpMessage</p>
+
+@if(Exception is null)
+{
+    <h6>@ErrorMessage</h6>
+    <p>@DetailsMessage</p>
+    <p>@HelpMessage</p>
+}
+else
+{
+    <h6>@Exception.GetType().Name</h6>
+    <p>@Exception.Message</p>
+    <p>@Exception.InnerException?.Message</p>
+    <p>@Exception.HelpLink</p>
+}
+
 <p>@Loc["Please report to"] your system administrator</p>
 @code {
 
