--- a/BLAZAM/Shared/UI/Inputs/MudSelectList.razor
+++ b/BLAZAM/Shared/UI/Inputs/MudSelectList.razor
@@ -2,10 +2,10 @@
 @typeparam T
 
 <MudSelect T="T"
-    @bind-SelectedValues=@SelectedValues
-    @bind-Text=@Text
-    @bind-Value=@Value
-    FullWidth=@FullWidth
+           @bind-SelectedValues=@SelectedValues
+           @bind-Text=@Text
+           @bind-Value=@Value
+           FullWidth=@FullWidth
            Dense=@Dense
            Variant="@Variant"
            MultiSelection=@MultiSelection
@@ -17,25 +17,27 @@
            Class=@Class
            ListClass=@(ListClass+"w-min")
            Style="@(Style+" min-width:100px;")">
-
-    @foreach (var val in Values)
+    @if (Values != null && Values.Count() > 0)
     {
-        <MudSelectItem Value="@val">
-            <MudText Color="@Color">
-                @if (ToStringFunc != null)
-                {
-                    <MudElement>
-                        @ToStringFunc.Invoke(val)
-                    </MudElement>
-                }
-                else
-                {
-                    <MudElement>
-                        @val.ToString()
-                    </MudElement>
-                }
-            </MudText>
-        </MudSelectItem>
+        @foreach (var val in Values)
+        {
+            <MudSelectItem Value="@val">
+                <MudText Color="@Color">
+                    @if (ToStringFunc != null)
+                    {
+                        <MudElement>
+                            @ToStringFunc.Invoke(val)
+                        </MudElement>
+                    }
+                    else
+                    {
+                        <MudElement>
+                            @val.ToString()
+                        </MudElement>
+                    }
+                </MudText>
+            </MudSelectItem>
+        }
     }
 </MudSelect>
 
