--- a/BLAZAM/Shared/UI/OU/MoveToOUModalContent.razor
+++ b/BLAZAM/Shared/UI/OU/MoveToOUModalContent.razor
@@ -1,27 +1,21 @@
 ﻿@inherits AppModalContent
-<div Background="Background.Light" Color="Color.Dark">
-<Row>
-    
-            <MudText>Choose OU</MudText>
-        
-            <OUTreeView @bind-StartingSelectedOU=@StartingOU @bind-SelectedOU=@SelectedOU>
-             @*   <NodeContent>
-                    @context.Name
-                </NodeContent>*@
-            </OUTreeView>
-        
-    
-</Row>
-<Row>
-    <MudButton Color="Color.Primary" OnClick="MoveTo">Move</MudButton>
 
-</Row>
-</div>
+
+<MudText>Choose OU</MudText>
+
+<OUTreeView @bind-StartingSelectedOU=@StartingOU @bind-SelectedOU=@SelectedOU>
+    @*   <NodeContent>
+    @context.Name
+    </NodeContent>*@
+</OUTreeView>
+
+
+
 
 @code {
 
 
-#nullable disable warnings
+    #nullable disable warnings
 
     [Parameter]
     public IDirectoryEntryAdapter DirectoryModel { get; set; }
@@ -33,11 +27,14 @@
     {
         await base.OnInitializedAsync();
         StartingOU = await DirectoryModel.GetParent();
+        Modal.OnYes += MoveTo;
+        Modal.YesText = UserLocalization["Move"];
+        Modal.Title = "Move To";
 
-
+        Modal.YesEnabled = ValidateModal;
     }
 
-    async Task MoveTo()
+    async void MoveTo()
     {
         if (await MessageService.Confirm("Are you sure you want to move this " + DirectoryModel.ObjectType.ToString().ToLower() + " to " + SelectedOU.CanonicalName + ". All other unsaved changes will be discarded.", "Confirm move"))
         {
@@ -54,4 +51,9 @@
         }
 
     }
+    protected override bool ValidateModal()
+    {
+        return SelectedOU != null;
+    }
+
 }
